--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,8 @@
 {
   "name": "Basic Node.js",
   "build": { "dockerfile": "Dockerfile" },
-  "remoteUser": "node"
+"remoteUser": "node",
+"features": {
+	"ghcr.io/devcontainers/features/docker-in-docker:2": {}
+}
 }
