--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,8 +1,10 @@
 {
   "name": "Basic Node.js",
-  "build": { "dockerfile": "Dockerfile" },
-"remoteUser": "node",
-"features": {
-	"ghcr.io/devcontainers/features/docker-in-docker:2": {}
-}
+  "build": {
+    "dockerfile": "Dockerfile"
+  },
+  "remoteUser": "node",
+  "features": {
+    "ghcr.io/devcontainers/features/docker-in-docker:2": {}
+  }
 }
