--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,6 +5,7 @@
   },
   "remoteUser": "node",
   "features": {
-    "ghcr.io/devcontainers/features/docker-in-docker:2": {}
+	"ghcr.io/devcontainers/features/docker-in-docker:2": {},
+	"ghcr.io/devcontainers-contrib/features/angular-cli:2": {}
   }
 }
