--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "@ngxs/store": "^3.8.2",
     "d3": "^7.8.5",
     "date-fns": "^2.30.0",
-    "lodash": "^4.17.21",
-    "moment": "^2.29.4",
+    "lodash-es": "^4.17.21",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
