--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "@apidevtools/json-schema-ref-parser": "^11.1.0",
+    "@jsonforms/angular": "3.1.0",
+    "@jsonforms/angular-material": "3.1.0",
+    "@jsonforms/core": "3.1.0",
     "@ngxs/store": "^3.8.2",
     "d3": "^7.8.5",
     "date-fns": "^2.30.0",
